Correctly aligned result digits

--- a/css/style.scss
+++ b/css/style.scss
@@ -68,7 +68,7 @@ div {
   bottom: 0;
   right: 0;
   background: rgba(0.5, 0.5, 0.5, 0.75);
-  z-index: 1;
+  z-index: 3;
 }
 
 .equation-area {
@@ -77,7 +77,7 @@ div {
   left: 0;
   right: 0;
   text-align: center;
-  z-index:1;
+  z-index: 3;
   color: #fff;
   
   input {
@@ -94,7 +94,7 @@ div {
   bottom: 20%;
   left: 20%;
   right: 20%;
-  z-index: 1;
+  z-index: 3;
 }
 
 .dial {
